Temperature converted and request resolver